// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContainer matches snapshot for default props 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-canvas"
  >
    <main
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-6 sm:pt-28 sm:pb-8 lg:pt-28 lg:pb-12"
    >
      <div>
        Test Content
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`PageContainer matches snapshot with custom props 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-canvas"
  >
    <main
      class="mx-auto max-w-5xl custom-wrapper"
    >
      <div>
        Custom Content
      </div>
    </main>
  </div>
</DocumentFragment>
`;
